Add webpack cli dev dpncy

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "forkify project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/mostmojo/forkify#readme",
   "devDependencies": {
-    "webpack": "^4.35.0"
-  }
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.5"
+  },
+  "dependencies": {}
 }
