--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
+    "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
+    "babel-preset-env": "^1.7.0",
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "html-webpack-plugin": "^3.2.0"
+    "@babel/polyfill": "^7.4.4"
   }
 }
