--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
   },
   "author": "Jacob",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "@babel/polyfill": "^7.4.4"
+  },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel-loader": "^8.0.6",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.5",
